# budget-tracker

./: .build-progress.md  .gitignore  .portfolio-progress.md  AGENTS.md  AI_PORTFOLIO_INSIGHTS_PLAN.md  CONVENTIONS.md  Cargo.toml  DECISIONS.md  Dockerfile  PHASE_1_KICKOFF.md  PHASE_1_REPORT.md  README.md  SPEC.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/budget-app-services/: Cargo.toml
crates/budget-app-services/src/: auth.rs  config.rs  deficit_financing.rs  error.rs  expected_expense.rs  fund.rs  income.rs  lib.rs  month_lifecycle.rs  onboarding.rs  plaid_sync.rs  portfolio_snapshot.rs  triage.rs
crates/budget-app-services/src/auth/: tests.rs
crates/budget-app-services/src/deficit_financing/: tests.rs
crates/budget-app-services/src/expected_expense/: tests.rs
crates/budget-app-services/src/fund/: tests.rs
crates/budget-app-services/src/income/: tests.rs
crates/budget-app-services/src/month_lifecycle/: tests.rs
crates/budget-app-services/src/onboarding/: tests.rs
crates/budget-app-services/src/plaid_sync/: tests.rs
crates/budget-app-services/src/portfolio_drip/: config.rs  mod.rs  tests.rs
crates/budget-app-services/src/portfolio_review/: mod.rs  reconcile.rs  tests.rs
crates/budget-app-services/src/portfolio_review/reconcile/: tests.rs
crates/budget-app-services/src/triage/: tests.rs
crates/budget-app-services/tests/: fund_independent.rs  income_independent.rs  month_lifecycle_independent.rs  onboarding_independent.rs
crates/budget-domain/: Cargo.toml
crates/budget-domain/src/: account.rs  auth.rs  budget.rs  category.rs  enums.rs  error.rs  fund.rs  ids.rs  lib.rs  money.rs  month.rs  paycheck_config.rs  plaid_api.rs  plaid_item.rs  portfolio.rs  predicates.rs  projections.rs  repayment_obligation.rs  repositories.rs  transaction.rs  uow.rs  user.rs  validated.rs
crates/budget-entities/: Cargo.toml
crates/budget-entities/src/: accounts.rs  budgets.rs  cash_balances.rs  categories.rs  dividend_events.rs  drip_applications.rs  funds.rs  lib.rs  months.rs  paycheck_config.rs  plaid_items.rs  positions.rs  repayment_obligations.rs  review_runs.rs  transactions.rs  users.rs  webauthn_credentials.rs
crates/budget-infrastructure/: Cargo.toml
crates/budget-infrastructure/src/: conn.rs  error.rs  lib.rs  portfolio_sources.rs  uow.rs  upsert.rs
crates/budget-infrastructure/src/advisor/: gemini.rs  mock.rs  mod.rs  wire.rs
crates/budget-infrastructure/src/advisor/fixtures/: gemini_captured_response.json  gemini_empty_recs.json  gemini_hallucinated.json  gemini_verified.json
crates/budget-infrastructure/src/auth/: extractor.rs  key_vault.rs  mod.rs  password.rs  session.rs  totp.rs  webauthn.rs
crates/budget-infrastructure/src/dividend_sources/: chain.rs  manual.rs  mock.rs  mod.rs  tiingo.rs  yahoo.rs
crates/budget-infrastructure/src/market_data/: chain.rs  finnhub.rs  mock.rs  mod.rs  stooq.rs
crates/budget-infrastructure/src/plaid/: http_client.rs  local_secret.rs  mock_client.rs  mod.rs  sync_engine.rs  wire.rs
crates/budget-infrastructure/src/plaid/fixtures/: sync_page_1.json  sync_page_2.json  sync_page_3.json  sync_page_empty.json
crates/budget-infrastructure/src/repositories/: budgets.rs  dividend_events.rs  drip_applications.rs  funds.rs  mock_tests.rs  mod.rs  months.rs  paycheck_config.rs  plaid_items.rs  review_runs.rs  transactions.rs  users.rs  webauthn_credentials.rs
crates/budget-infrastructure/tests/: advisor_mock.rs  plaid_sync_engine.rs  plaid_sync_engine_independent.rs  repositories_live.rs  webauthn_ceremony.rs
crates/budget-mappers/: Cargo.toml
crates/budget-mappers/src/: accounts.rs  budgets.rs  cash_balances.rs  categories.rs  dividend_events.rs  drip_applications.rs  funds.rs  lib.rs  months.rs  paycheck_config.rs  plaid_items.rs  positions.rs  repayment_obligations.rs  review_runs.rs  transactions.rs  users.rs  webauthn_credentials.rs
crates/budget-migration/: Cargo.toml
crates/budget-migration/src/: lib.rs  m0001_genesis_schema.rs  m0002_auth_schema.rs  m0003_transaction_match_link.rs  m0004_deficit_financing.rs  m0005_transaction_comment.rs  m0006_transfer_flag.rs  m0007_portfolio_insights.rs  m0008_drip_realtime.rs
crates/budget-migration/tests/: genesis_applies.rs
crates/budget-server/: Cargo.toml
crates/budget-server/src/: main.rs
crates/budget-server/static/: manifest.json  service-worker.js
crates/budget-ui/: Cargo.toml  index.html
crates/budget-ui/src/: lib.rs  main.rs  server.rs  server_state.rs
crates/budget-ui/src/components/: mod.rs  nav.rs  webauthn.rs
crates/budget-ui/src/services/: account.rs  auth.rs  gate.rs  health.rs  ledger.rs  ledger_edit.rs  mod.rs  month_view.rs  passkey.rs  portfolio_review.rs  triage.rs
crates/budget-ui/src/views/: account.rs  budget.rs  ledger.rs  login.rs  mod.rs  pending.rs  portfolio_review.rs
crates/budget-ui/static/: app.css  service-worker.js
crates/budget-ui/static/icons/: generate-placeholder-icons.sh  generate_icons.py
crates/budget-ui/tests/: auth_gate.rs
docs/: AI_FEATURE_DESIGN.md  DRIFT_REPORT.md  DRIP_REALTIME_DESIGN.md  LOCAL_TESTING.md
docs/planning/: DRIFT_AUDIT_run1.md  chorale-integration-cheatsheet.md
infra/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf  versions.tf
