[package]
name = "budget-app-services"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Use-case orchestration. Wires domain operations together (month lifecycle, rolling Other, funds, income, Plaid sync). Depends only on domain."

[lints]
workspace = true

[dependencies]
budget-domain = { path = "../budget-domain" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
# Fixed home-TZ month-membership (America/New_York, D2). Used only to decide
# which calendar (year, month) a UTC instant belongs to; the domain stays UTC.
chrono-tz = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
tracing = { workspace = true }

# No direct tokio dep: app-services is pure orchestration. Async syntax is in
# std; the runtime is provided by the binary in the (frontend-phase) server
# crate. This keeps app-services WASM-compatible for Dioxus server functions
# (D1: server functions -> services -> repositories).
async-trait = { workspace = true }

# `try_join_all` for the concurrent per-ticker market-quote fan-out in the
# portfolio-review snapshot assembly (`ARCH-PARALLEL-INDEPENDENT-1`). Executor-
# free futures-util surface; WASM-compatible (no tokio).
futures = { workspace = true }

[dev-dependencies]
# A minimal runtime to drive the async service tests (`#[tokio::test]`).
# `rt-multi-thread` is required only by the #[ignore]d live-DB concurrency
# harness in tests/month_lifecycle_independent.rs (the genesis-init race the
# rollover guard defends, BUDGET-IDEMPOTENT-MONTH-INIT-1). Test-only; the crate
# itself stays runtime-free so it remains WASM-compatible for Dioxus server fns.
tokio = { version = "1.40", features = ["macros", "rt", "rt-multi-thread"] }
