[package]
name = "budget-infrastructure"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Concrete adapters: SeaORM persistence (repository impls + UnitOfWork), Azure Key Vault, Plaid client, etc."

[lints]
workspace = true

# NOTE: the out-of-band admin CLIs (provision-user, seed-onboarding) were MOVED
# to the `budget-server` crate (the server edge) in the frontend-scaffold phase.
# They orchestrate app-services + infrastructure together, which belongs at the
# server layer, not inside the infrastructure library. Moving them OUT lets this
# crate drop its `budget-app-services` dependency edge: the infrastructure
# LIBRARY now depends only on the layers below it (domain, entities, mappers,
# migration), restoring strict downward layering (RUST-ENTITIES-13).

[dependencies]
budget-domain = { path = "../budget-domain" }
budget-entities = { path = "../budget-entities" }
budget-mappers = { path = "../budget-mappers" }

# The schema Migrator (budget-migration::Migrator). The infrastructure crate is
# the one place that connects to Postgres at startup, so it owns running pending
# migrations (PROC-CI-MIGRATION-HYGIENE-1: the runner is idempotent).
budget-migration = { path = "../budget-migration" }
sea-orm-migration = { workspace = true }

# Repository traits are declared in budget-domain with `#[async_trait]`; the
# impls in this crate need the same macro on the impl blocks.
async-trait = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
tracing = { workspace = true }

# Persistence: SeaORM 1.x backed by sqlx-postgres on the tokio runtime with
# rustls TLS. Runtime + driver are explicit because SeaORM doesn't pick those
# by default.
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-rust_decimal",
    "with-chrono",
    "with-uuid",
] }

# ---- Auth subsystem (build step 7, BUDGET-AUTH-GATE-1, SPEC §9.1) ----------
# All concrete auth tech lives in this (infrastructure) crate per the layering:
# domain holds the ports, app-services orchestrates, infra implements.

# Argon2id password hashing (SPEC §9.1). default features give password-hash +
# rand (salt generation) + alloc; std is enabled for the OsRng salt source.
argon2 = { version = "0.5", features = ["std"] }

# RFC 6238 TOTP, mandatory second factor (SPEC §9.1, AUTH-1/2). `otpauth`
# enables the provisioning-URI / Secret helpers for enrollment.
totp-rs = { version = "5", features = ["otpauth", "gen_secret"] }

# WebAuthn / passkeys (SPEC §9.1). The core ceremony engine.
#
# `danger-allow-state-serialisation` lets the in-progress ceremony state
# (`PasskeyRegistration` / `PasskeyAuthentication`) derive serde so it can be
# stashed BETWEEN the start and finish HTTP round-trips. The feature name is
# alarmist: the actual requirement webauthn-rs documents is that the state MUST
# be stored SERVER-SIDE (never handed to the client), which the Postgres-backed
# `tower-sessions` store satisfies exactly. The frontend phase needs this because
# the start ceremony runs in one server function and the finish in another, with
# the browser WebAuthn API call in between; the state lives in the server-side
# session keyed to the session cookie, not in any client-reachable place.
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }

# Postgres-backed server-side session store (SPEC §9.1: survives scale-to-zero).
# tower-sessions owns the cookie + session lifecycle; the sqlx store owns its own
# `tower_sessions.session` table and migrates it at startup.
#
# Pinned to 0.14: tower-sessions-sqlx-store 0.15 depends on tower-sessions-core
# 0.14, so the session layer (tower-sessions) MUST also resolve to the 0.14 core
# for PostgresStore to implement the layer's SessionStore trait. 0.14 uses
# axum-core 0.5 (axum 0.8-compatible).
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }

# The AuthedUser extractor + the in-crate minimal Axum test harness
# (BUDGET-AUTH-GATE-1 enforce-by-construction). The HTTP host itself is the
# frontend phase; here axum is used only to define + test the extractor.
axum = "0.8"
http = "1"

# Azure Key Vault read-by-reference for DB creds + (step 8) the Plaid token
# (BUDGET-PLAID-TOKEN-VAULT-1). Managed-identity auth via azure_identity.
azure_core = "1"
azure_identity = "1"
azure_security_keyvault_secrets = "1"

# Direct sqlx handle for the session store (the sqlx PgPool is pulled out of the
# SeaORM connection). Version-locked to the sqlx SeaORM 1.1 already depends on.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
] }

# Base64 for serializing opaque WebAuthn registration/auth state across the
# (frontend-phase) wire, and for any opaque-blob handling at this boundary.
base64 = "0.22"

# The Plaid HTTP client (build step 8, SPEC §6). rustls (no system OpenSSL) +
# JSON; version-locked to the 0.13 already in the tree (transitive via azure).
# This is the ONLY direct Plaid network dependency; the sync engine + service
# work against the domain `PlaidApi` port so tests run fully mocked (no live
# Plaid call, SPEC §6).
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "http2",
    "charset",
    "json",
] }

# The MockDatabase driver (sea_orm::MockDatabase) is used only in unit tests.
# Adding `mock` here enables it for the test build without touching the
# production feature set.  NOTE: Cargo feature unification means `mock` will
# be active for ALL crate targets during `cargo test`, which is intentional —
# the lib test module (src/repositories/mock_tests.rs) and the integration test
# (tests/repositories_live.rs) both compile with the same feature set.
# The live integration tests (repositories_live.rs) gate themselves on
# DATABASE_URL and no-op in CI until Neon is provisioned (SPEC §12).
[dev-dependencies]
sea-orm = { workspace = true, features = ["mock"] }
# The AuthedUser-gate harness drives the router via tower's oneshot and an
# in-memory session store (no Postgres needed for the gate test).
tower = { version = "0.5", features = ["util"] }
tower-sessions = { version = "0.14", features = ["memory-store"] }
async-trait = { workspace = true }
webauthn-authenticator-rs = { version = "0.5.5", default-features = false, features = ["softpasskey", "crypto"] }
