[package]
name = "budget-mappers"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Translation layer between SeaORM Model types (budget-entities) and domain types (budget-domain). Own crate so neither domain nor infrastructure depends on the other (MAPPER-1)."

[lints]
workspace = true

[dependencies]
budget-domain = { path = "../budget-domain" }
budget-entities = { path = "../budget-entities" }

# SeaORM is needed for ActiveModel / ActiveValue::Set in the domain_to_active_model
# direction. The mapper crate is the boundary between entity and domain types, so
# depending on sea-orm here is correct (MAPPER-1).
sea-orm = { workspace = true }

thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }

# The review_runs mapper serde-round-trips the three JSONB payload columns
# (snapshot / outcomes / recommendations) between SeaORM's `Json` and the domain
# aggregate (`docs/AI_FEATURE_DESIGN.md §0.4`). serde derives already live on the
# domain types; serde_json is the JSONB codec at this boundary.
serde = { workspace = true }
serde_json = { workspace = true }
