# budget-server — the native server binary crate (the top edge of the layering).
#
# This is the thin native entrypoint for the Dioxus fullstack app: it depends on
# `budget-ui` with the `server` feature and launches the Axum router that serves
# the SSR HTML, the client bundle, and the server-function endpoints from one
# process (RUST-DIOXUS-11). It is also the home for the out-of-band admin CLIs
# (`provision-user`, `seed-onboarding`), MOVED here out of `budget-infrastructure`
# so the infrastructure LIBRARY no longer carries a `budget-app-services`
# dependency edge (it was bin-only before; the smell is now resolved — the
# server crate is the correct place for code that orchestrates app-services +
# infrastructure together).
#
# Canonical layering (RUST-ENTITIES-13): domain <- mappers <- infrastructure <-
# app_services <- server. This crate sits at `server`; depending on both
# app-services and infrastructure here is correct and introduces no cycle.
[package]
name = "budget-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Native server binary: Axum fullstack host for budget-ui, plus the provision-user / seed-onboarding admin CLIs."

[lints]
workspace = true

# The Dioxus fullstack server entrypoint (default bin).
[[bin]]
name = "budget-server"
path = "src/main.rs"

# The out-of-band single-user seed (SPEC §9; BUDGET-AUTH-GATE-1). MOVED from
# budget-infrastructure/src/bin — it orchestrates the infra repos + Argon2/TOTP,
# which belongs at the server edge, not inside the infrastructure library.
[[bin]]
name = "provision-user"
path = "src/bin/provision_user.rs"

# The re-runnable initial-load seed (SPEC §4.6, §12 D8; BUDGET-CUTOVER-1). MOVED
# from budget-infrastructure/src/bin — it needs OnboardingService (app-services)
# AND the concrete repos (infrastructure); the server crate is the one place that
# legitimately depends on both.
[[bin]]
name = "seed-onboarding"
path = "src/bin/seed_onboarding.rs"

# STAGE-1 local-testing seed. Populates a LOCAL Postgres with a realistic demo
# budget (categories, month, funds, fake PlaidItem, pre-settled txns) so every
# UI screen has content before the first Pull. Requires only DATABASE_URL +
# SEED_EMAIL; NO Plaid credentials, NO Azure.
[[bin]]
name = "seed-local-demo"
path = "src/bin/seed_local_demo.rs"

[dependencies]
# The fullstack app, server side. The `server` feature pulls Dioxus's server
# runtime and the app-services/infrastructure stack into budget-ui's graph.
budget-ui = { path = "../budget-ui", features = ["server"] }

# The use-case + persistence + domain layers the CLIs (and future bespoke routes)
# call directly.
budget-app-services = { path = "../budget-app-services" }
budget-infrastructure = { path = "../budget-infrastructure" }
budget-domain = { path = "../budget-domain" }

dioxus = { version = "0.7", default-features = false, features = [
    "fullstack",
    "server",
    "router",
] }

# The Axum fullstack integration: `ServeConfig` + the `DioxusRouterExt` trait
# (`serve_dioxus_application`, `register_server_functions`) that wires the
# server-function endpoints + SSR + static-asset serving onto an Axum router
# (RUST-DIOXUS-11). `dioxus-cli-config` supplies the bind address the `dx` CLI
# injects. Both are version-locked to the dioxus 0.7.9 in the tree.
dioxus-server = "0.7"
dioxus-cli-config = "0.7"

# The Axum host. Pinned to 0.8 to match the version dioxus-server + the
# AuthedUser extractor (budget-infrastructure) resolve against.
axum = "0.8"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI edges (RUST-DOMAIN-4 reserves anyhow for application edges / binaries).
anyhow = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
