# budget-ui — the Dioxus 0.7 fullstack application crate.
#
# Per RUST-DIOXUS-16 a Dioxus Fullstack web app is a SINGLE crate that compiles
# to two targets — the native `server` target (SSR host + server-function
# handlers) and the `web` wasm32 target (the hydrating client bundle) — sharing
# one `App` component. Per-target code is gated by Cargo features (`server` /
# `web`) so native-only dependencies (Axum, the DB drivers pulled in transitively
# through the app-services/infrastructure crates) never enter the wasm32
# dependency graph.
#
# The companion `budget-server` binary crate is the thin native entrypoint: it
# depends on THIS crate with the `server` feature, mounts the Axum router that
# serves the SSR HTML + the client bundle + the server-function endpoints
# (RUST-DIOXUS-11), and additionally hosts the out-of-band admin CLIs
# (provision-user / seed-onboarding). Keeping the `App` + the server functions
# here, and the launch wiring there, satisfies the orchestrator's two-crate ask
# while preserving the single shared `App` component the single-crate rule is
# really about.
[package]
name = "budget-ui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Dioxus 0.7 fullstack app: App shell, router, views, and server functions calling the app-services layer (D1, RUST-DIOXUS-9/11/16)."

[lints]
workspace = true

[features]
default = []
# The native SSR-host + server-function-handler target. Pulls the fullstack
# server runtime and the server-side service/persistence stack. Enabled by the
# `budget-server` binary crate.
server = [
    "dioxus/server",
    "dep:budget-app-services",
    "dep:budget-infrastructure",
    "dep:sea-orm",
    "dep:tower-sessions",
    "dep:tokio",
    "dep:tracing",
    "dep:uuid",
    "dep:chrono-tz",
    "dep:async-trait",
]
# The wasm32 hydrating client bundle. `dx serve` / the deploy build selects this
# for the browser target.
web = ["dioxus/web"]

[dependencies]
# Dioxus fullstack: the `macro`/`html`/`hooks`/`signals`/`router`/`fullstack`
# features are target-agnostic; `server` and `web` are layered on by the
# features above so the wasm graph stays free of the native server runtime.
dioxus = { version = "0.7", default-features = false, features = [
    "macro",
    "html",
    "hooks",
    "signals",
    "document",
    "router",
    "fullstack",
] }

# The chorale table library (Zach's own — dogfood). Git dependency pinned to the
# `main` branch per SPEC §7 / §12 until v0.2.0 publishes to crates.io, at which
# point this swaps to `chorale-dioxus = "0.2.0"`. chorale-dioxus is itself a
# Dioxus 0.7 adapter, so the versions line up.
chorale-dioxus = { git = "https://github.com/zernst3/rust-chorale", branch = "main" }
chorale-core = { git = "https://github.com/zernst3/rust-chorale", branch = "main" }

# The domain crate is WASM-clean (no SeaORM/Axum), so it is safe on BOTH targets:
# server functions return domain-shaped DTOs and the client renders them. Money
# stays rust_decimal::Decimal end-to-end (BUDGET-MONEY-1), never a float.
budget-domain = { path = "../budget-domain" }

serde = { workspace = true }
# serde_json carries the opaque WebAuthn ceremony JSON (challenge + the browser's
# credential response) across the passkey server functions and the client-side
# ceremony bridge. The binary shapes are base64url inside the JSON, so no raw
# bytes cross the server-function boundary as a bespoke type.
serde_json = { workspace = true }
rust_decimal = { workspace = true }
# chrono is pure Rust and safe on wasm32. Used in views (current month) and
# server functions (ensure_current_month timestamp arg).
chrono = { workspace = true }

# Server-only: the use-case + persistence layers the server functions call
# directly (RUST-DIOXUS-9). Gated `optional` so they are absent from the wasm
# graph; only the `server` feature pulls them in.
budget-app-services = { path = "../budget-app-services", optional = true }
budget-infrastructure = { path = "../budget-infrastructure", optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
# Server-only: the DRIP pay-date price adapter in `server_state` implements the
# app-services `PayDatePriceSource` port via `#[async_trait]` (P7.4 wire-in).
async-trait = { workspace = true, optional = true }

# Server-only: the SeaORM connection the server state is built from, and the
# tower-sessions `Session` handle the gate + login/logout server functions use.
# Both are gated behind the `server` feature so they stay out of the wasm graph;
# tower-sessions is version-locked to the 0.14 the infrastructure crate's session
# store + AuthedUser extractor resolve against.
sea-orm = { workspace = true, optional = true }
tower-sessions = { version = "0.14", optional = true }

# Server-only: the triage server functions parse wire UUIDs into domain newtypes
# and resolve the Plaid reconcile-window date in the home timezone (D2). Both stay
# out of the wasm graph (the wasm uuid dep below is a separate target-cfg entry).
uuid = { workspace = true, optional = true }
chrono-tz = { version = "0.10", optional = true }

# RUST-WASM-GETRANDOM-1: the dependency graph (uuid in budget-domain, ahash via
# dioxus, etc.) transitively includes getrandom, whose wasm32 build fails to
# compile unless its `wasm_js` Cargo feature is enabled. Declare it as a
# target-cfg direct dep for wasm32 so Cargo feature unification propagates the
# feature to every transitive user. uuid's `js` feature is enabled for the same
# reason.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
uuid = { workspace = true, features = ["js"] }
# web-sys: service-worker registration in lib.rs (Phase B3 PWA shell).
# Only used on wasm32 behind a `#[cfg(target_arch = "wasm32")]` block.
web-sys = { version = "0.3", features = ["Navigator", "ServiceWorkerContainer", "Window"] }

# Dev-deps for the server-side `AuthedUser`-gate integration test
# (tests/auth_gate.rs, `#[cfg(feature = "server")]`). These drive the REAL gate
# through a `FullstackContext` scope with an in-memory session + fake repos, so
# no Postgres is needed. Versions are locked to the workspace / infrastructure
# crate's resolutions (tower-sessions 0.14, axum 0.8, the sqlx-free memory-store).
[dev-dependencies]
budget-app-services = { path = "../budget-app-services" }
budget-infrastructure = { path = "../budget-infrastructure" }
async-trait = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
axum = "0.8"
http = "1"
tower-sessions = { version = "0.14", features = ["memory-store"] }
